# moleculead

./: .gitignore  Dockerfile  README.md  pyproject.toml  start_services.sh
.github/workflows/: ci.yml
app/: server.py
data/: data_diseases.py  data_drugs.py  data_pathways.py  data_proteins.py  disease_data.pkl  pathway_data.pkl
frontend_demo/: package-lock.json
frontend_demo/src/: App.tsx  index.tsx
frontend_demo/src/contexts/: SearchContext.tsx  SearchContext2.tsx  apiTypes.ts  processApiResponse.ts  sendSearchRequest.ts
frontend_demo/src/ui/components/app/: appHeader.scss
frontend_demo/src/utils/: deserializeSearchResponse.ts
frontend_demo/src/views/search/: SearchComp.tsx  SearchResultList.tsx  SearchUx.tsx  SearchView.tsx  SummaryComponent.tsx  SummaryUx.tsx  types.ts
frontend_demo/src/views/search/chrome/: AppHeader.tsx  appHeader.scss
frontend_demo/src/views/search/results/: SearchResult.tsx  SearchResultList.tsx
frontend_demo/vectara-answer/src/contexts/: SearchContext.tsx
frontend_demo/vectara-answer/src/ui/components/searchInput/: SearchInput.tsx
frontend_demo/vectara-answer/src/utils/: parseSnippet.ts
frontend_demo/vectara-answer/src/views/search/: SearchView.tsx  SummaryUx.tsx  types.ts
frontend_demo/vectara-answer/src/views/search/controls/: SearchControls.tsx
